...
          color="primary"
          style={{ textAlign: "center" }}
        >
          {t("dogProfile.shareProfile", { name: firstName })}
        </Text>
      </S.ShareButton>
      <S.ReportButton testID="dog-profile-report">
        <Text onPress={() => reportProfile(dog)} fontWeight="bold" style={{ textAlign: "center" }}>
          {t("dogProfile.reportName", { name: firstName })}
        </Text>
      </S.ReportButton>
      {__DEV__ && matchId ? (
        <S.ReportButton>
...
