...
          tabBarIcon: SwipeTabIcon,
        }}
      />
      <Tabs.Screen
        name="messages"
        options={{
          tabBarButtonTestID: "tab-messages",
          tabBarIcon: MessagesTabIcon,
        }}
      />
      <Tabs.Screen
        name="profile"
        options={{
...
